--- a/contact.html
+++ b/contact.html
@@ -4,31 +4,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <link rel="shortcut icon" href="Assets/favicon.ico" type="image/x-icon">
+    <title>Contact Us</title>
     <!-- Tailwind CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <!-- Google poppins font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-<!-- style sheet -->
- 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!-- GSAP (GreenSock Animation Platform) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+     <!-- Fontawesome CDN -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- style sheet -->
     <style>
         .about-card {
             max-width: 600px;
             background-color: #ffffff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-        *{
+
+        * {
             font-family: "Poppins", sans-serif;
         }
-       
+
+        .confirmation-message {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: rgba(0, 0, 0, 0.8);
+            color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            z-index: 100;
+        }
     </style>
 </head>
 
-<body>
-
-    <!-- Navigation bar (copied from previous example) -->
+<body style="background: #0F2027;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to bottom, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to bottom, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+">
     <nav class="bg-gray-900 text-white p-4 flex justify-between items-center">
         <div class="flex items-center space-x-4">
             <div>
@@ -42,7 +60,6 @@
             <a href="index.html" class="hover:text-gray-300">Home</a>
             <a href="rotractors.html" class="hover:text-gray-300">Our Rotractors</a>
             <a href="about.html" class="hover:text-gray-300">About Our Legacy</a>
-            <a href="#" class="hover:text-gray-300">Our Mission</a>
             <a href="join.html" class="hover:text-gray-300">Join Us</a>
             <a href="contact.html" class="text-red-600 border-b-2 border-red-600">Contact Us</a>
         </div>
@@ -65,26 +82,133 @@
             </button>
         </div>
         <div class="flex flex-col items-center mt-20">
-            <a href="#" class="text-white text-xl py-4 hover:text-gray-300">About Our Legacy</a>
-            <a href="#" class="text-white text-xl py-4 hover:text-gray-300">Join Us</a>
-            <a href="#" class="text-white text-xl py-4 hover:text-gray-300">Contact Us</a>
+            <a href="index.html" class="text-white text-xl py-4 hover:text-gray-300">Home</a>
+            <a href="about.html" class="text-white text-xl py-4 hover:text-gray-300">About Our Legacy</a>
+            <a href="rotractors.html" class="text-white text-xl py-4 hover:text-gray-300">Our Rotractors</a>
+            <a href="join.html" class="text-white text-xl py-4 hover:text-gray-300">Join Us</a>
+            <a href="contact.html" class="text-red-600 text-xl py-4 hover:text-gray-300">Contact Us</a>
         </div>
     </div>
 
-   
+    <!-- Form Section -->
+    <div class="container mx-auto mt-8 px-4 mb-8 ">
+        <div style="background: #1f4037;  /* fallback for old browsers */
+        background: -webkit-linear-gradient(to bottom, #99f2c8, #1f4037);  /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to bottom, #99f2c8, #1f4037); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        " class="max-w-lg mx-auto bg-white p-6 rounded-lg shadow-lg">
+            <h2 class="text-2xl font-bold text-gray-800 mb-6">Contact Us</h2>
+            <form id="contactForm" class="space-y-4">
+                <div>
+                    <label for="name" class="block text-sm font-medium text-gray-700">Name*</label>
+                    <input type="text" id="name" name="name"
+                        class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50"
+                        required>
+                    <p id="nameError" class="text-red-500 text-sm hidden">Please enter your name.</p>
+                </div>
+                <div>
+                    <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
+                    <input type="email" id="email" name="email"
+                        class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50"
+                        required>
+                    <p id="emailError" class="text-red-500 text-sm hidden">Please enter a valid email address.</p>
+                </div>
+                <div>
+                    <label for="message" class="block text-sm font-medium text-gray-700">Message</label>
+                    <textarea id="message" name="message" rows="4"
+                        class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50"
+                        required></textarea>
+                    <p id="messageError" class="text-red-500 text-sm hidden">Please enter your message.</p>
+                </div>
+                <div>
+                    <button type="submit"
+                    style="background: #7F7FD5;  /* fallback for old browsers */
+                    background: -webkit-linear-gradient(to bottom, #91EAE4, #86A8E7, #7F7FD5);  /* Chrome 10-25, Safari 5.1-6 */
+                    background: linear-gradient(to bottom, #91EAE4, #86A8E7, #7F7FD5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+                    "
+                        class="w-full text-white px-6 py-3 rounded-md">Submit</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!-- Confirmation Message -->
+    <div id="confirmationMessage" class="confirmation-message">
+        <p class="text-lg">Message sent successfully!</p>
+    </div>
+
+    <!-- Footer -->
+    <footer class="bg-gray-900 text-white py-8">
+        <div
+          class="container mx-auto flex flex-col md:flex-col items-center justify-center px-4"
+        >
+        <div class="p-2">
+          <a class="p-2" href="#" class="text-gray-900 hover:text-green-500 mb-4">
+              <i class="fab fa-whatsapp fa-2x"></i>
+            </a>
+            <a href="https://www.instagram.com/rotaractsecunderabad?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" class="">
+              <i class="fab fa-instagram fa-2x"></i>
+            </a>
+      </div>
+          <div class="mb-4 md:mb-0">
+            <p>&copy; 2024 RAC-Secunderabad. All rights reserved.</p>
+          </div>
+  
+        </div>
+      </footer>
+
+    <!-- JavaScript imports -->
     <script>
-        const menuToggle = document.getElementById('menu-toggle');
-        const menuClose = document.getElementById('menu-close');
-        const mobileMenu = document.getElementById('mobile-menu');
+        // Form submission handling
+        const contactForm = document.getElementById('contactForm');
+        const confirmationMessage = document.getElementById('confirmationMessage');
 
-        menuToggle.addEventListener('click', () => {
-            mobileMenu.classList.toggle('hidden');
-        });
+        contactForm.addEventListener('submit', function (event) {
+            event.preventDefault();
+            // Validate form
+            let valid = true;
 
-        menuClose.addEventListener('click', () => {
-            mobileMenu.classList.add('hidden');
+            const name = document.getElementById('name');
+            const email = document.getElementById('email');
+            const message = document.getElementById('message');
+            const nameError = document.getElementById('nameError');
+            const emailError = document.getElementById('emailError');
+            const messageError = document.getElementById('messageError');
+
+            // Reset error messages
+            nameError.classList.add('hidden');
+            emailError.classList.add('hidden');
+            messageError.classList.add('hidden');
+
+            if (!name.value.trim()) {
+                nameError.classList.remove('hidden');
+                valid = false;
+            }
+
+            if (!/\S+@\S+\.\S+/.test(email.value)) {
+                emailError.classList.remove('hidden');
+                valid = false;
+            }
+
+            if (!message.value.trim()) {
+                messageError.classList.remove('hidden');
+                valid = false;
+            }
+
+            if (valid) {
+                // Simulate form submission (here you would actually submit to a server)
+                setTimeout(() => {
+                    // Show confirmation message
+                    gsap.to(confirmationMessage, { duration: 0.5, opacity: 1, display: 'block', ease: 'power2.out' });
+
+                    
+                    setTimeout(() => {
+                        window.location.href = 'contact.html';
+                    }, 2000);
+                }, 500); 
+            }
         });
     </script>
+    <script src="script.js"></script>
 
 </body>
 
