--- a/rotractors.html
+++ b/rotractors.html
@@ -26,43 +26,39 @@
     />
     <style>
       #progress {
-        position: fixed;
-        bottom: 75px;
-        right: 10px;
-        height: 57px;
-        width: 57px;
-        display: none;
-        place-items: center;
-        border-radius: 50%;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-        cursor: pointer;
-      }
+  position: fixed;
+  bottom: 20px; /* Adjust as needed */
+  right: 20px; /* Adjust as needed */
+  height: 50px;
+  width: 50px;
+  background-color: #D91B5B;;
+  border-radius: 50%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  display: none; /* Initially hidden */
+  align-items: center;
+  justify-content: center;
+}
 
-      #progress-value {
-        display: block;
-        height: calc(100% - 15px);
-        width: calc(100% - 15px);
-        background-color: #ffffff;
-        border-radius: 50%;
-        display: grid;
-        place-items: center;
-        font-size: 30px;
-        color: #001a2e;
-      }
+#progress-value {
+  font-size: 24px;
+  color: #001a2e;
+}
+
     </style>
   </head>
-  <body>
+  <body style="background-color: #D91B5B;">
     <div id="progress">
-      <span id="progress-value"><i class="fa-solid fa-chevron-up"></i></span>
+      <span id="progress-value">&#x1F815;</span>
     </div>
     <nav class="bg-slate-900 text-white p-4 flex justify-between items-center">
       <div class="flex items-center space-x-4">
         <div>
-          <img src="logo1.png" alt="Logo 1" class="h-10" />
+          <img src="Assets/RAC SEC White.png" alt="Logo 1" class="w-[38vw] md:w-[16vw]" />
         </div>
-        <div>
+        <!-- <div>
           <img src="logo2.png" alt="Logo 2" class="h-10" />
-        </div>
+        </div> -->
       </div>
       <div class="hidden md:flex space-x-6">
         <a href="index.html" class="hover:text-gray-300">Home</a>
@@ -140,8 +136,16 @@
     </div>
 
     <div class="container mx-auto py-8">
-      <!-- Division with heading and paragraph -->
-      <div class="max-w-4xl mx-auto bg-white p-8 rounded-lg shadow-lg mb-8">
+      
+      <div style="
+            background: #c9ccd3;
+            background-image: linear-gradient(
+              -180deg,
+              rgba(255, 255, 255, 0.5) 0%,
+              rgba(0, 0, 0, 0.5) 100%
+            );
+            background-blend-mode: lighten;
+          " id="our-team" class="max-w-4xl mx-auto bg-white p-8 rounded-lg mb-8">
         <h3 class="text-2xl md:text-3xl font-semibold text-gray-800 mb-4">
           Our Team
         </h3>
@@ -158,205 +162,111 @@
         <!-- Example card (repeat for each team member) -->
         <div class="bg-white rounded-lg shadow-lg overflow-hidden card">
           <img
-            src="https://plus.unsplash.com/premium_photo-1678197937465-bdbc4ed95815?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            src="Assets/Sadiq.jpeg"
             style="background-size: cover"
             alt="Person 1"
-            class="w-full h-56 object-cover"
+            class="w-full h-full object-cover"
           />
-          <div class="p-4">
-            <h4 class="text-xl font-semibold text-gray-800 mb-2">
-              Sadiq Basha
-            </h4>
-            <p class="text-gray-700 text-sm mb-2">Immediate Past President</p>
-            <!-- <p class="text-gray-500 text-sm">Profession:Software Developer</p> -->
-          </div>
         </div>
-        <!-- Repeat the card structure for each team member -->
-        <!-- Example card (repeat for each team member) -->
         <div class="bg-white rounded-lg shadow-lg overflow-hidden card">
           <img
-            src="https://plus.unsplash.com/premium_photo-1674112877123-c8419badc6a7?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt="Person 2"
-            class="w-full h-56 object-cover"
-          />
-          <div class="p-4">
-            <h4 class="text-xl font-semibold text-gray-800 mb-2">
-              Likitha Nandikanti
-            </h4>
-            <p class="text-gray-700 text-sm mb-2">Secretary</p>
-            <!-- <p class="text-gray-500 text-sm">Profession</p> -->
-          </div>
-        </div>
-        <!-- Repeat the card structure for each team member -->
-        <!-- Example card (repeat for each team member) -->
-        <div class="bg-white rounded-lg shadow-lg overflow-hidden card">
-          <img
-            src="https://images.unsplash.com/photo-1543205089-425bfeaf4d43?q=80&w=1933&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            src="Assets/Pranay.jpeg"
             alt="Person 3"
-            class="w-full h-56 object-cover"
+            class="w-full h-full object-cover"
           />
-          <div class="p-4">
-            <h4 class="text-xl font-semibold text-gray-800 mb-2">Pranay</h4>
-            <p class="text-gray-700 text-sm mb-2">President</p>
-            <!-- <p class="text-gray-500 text-sm">Profession</p> -->
-          </div>
         </div>
         <div class="bg-white rounded-lg shadow-lg overflow-hidden card">
           <img
-            src="https://images.unsplash.com/photo-1543205089-425bfeaf4d43?q=80&w=1933&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt="Person 3"
-            class="w-full h-56 object-cover"
+            src="Assets/Amogha.jpeg"
+            alt="Vice-presedent"
+            class="w-full h-full object-cover"
           />
-          <div class="p-4">
-            <h4 class="text-xl font-semibold text-gray-800 mb-2">Pranay</h4>
-            <p class="text-gray-700 text-sm mb-2">President</p>
-            <!-- <p class="text-gray-500 text-sm">Profession</p> -->
-          </div>
         </div>
         <div class="bg-white rounded-lg shadow-lg overflow-hidden card">
-          <img
-            src="https://images.unsplash.com/photo-1543205089-425bfeaf4d43?q=80&w=1933&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt="Person 3"
-            class="w-full h-56 object-cover"
-          />
-          <div class="p-4">
-            <h4 class="text-xl font-semibold text-gray-800 mb-2">Pranay</h4>
-            <p class="text-gray-700 text-sm mb-2">President</p>
-            <!-- <p class="text-gray-500 text-sm">Profession</p> -->
+            <img
+              src="Assets/Likky.jpeg"
+              alt="Secretary"
+              class="w-full h-full object-cover"
+            />
           </div>
-        </div>
-        <div class="bg-white rounded-lg shadow-lg overflow-hidden card">
-          <img
-            src="https://images.unsplash.com/photo-1543205089-425bfeaf4d43?q=80&w=1933&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt="Person 3"
-            class="w-full h-56 object-cover"
-          />
-          <div class="p-4">
-            <h4 class="text-xl font-semibold text-gray-800 mb-2">Pranay</h4>
-            <p class="text-gray-700 text-sm mb-2">President</p>
-            <!-- <p class="text-gray-500 text-sm">Profession</p> -->
+          <div class="bg-white rounded-lg shadow-lg overflow-hidden card">
+            <img
+              src="Assets/Rama.jpeg"
+              alt="Club Advisor"
+              class="w-full h-full object-cover"
+            />
           </div>
-        </div>
-        <div class="bg-white rounded-lg shadow-lg overflow-hidden card">
-          <img
-            src="https://images.unsplash.com/photo-1543205089-425bfeaf4d43?q=80&w=1933&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt="Person 3"
-            class="w-full h-56 object-cover"
-          />
-          <div class="p-4">
-            <h4 class="text-xl font-semibold text-gray-800 mb-2">Pranay</h4>
-            <p class="text-gray-700 text-sm mb-2">President</p>
-            <!-- <p class="text-gray-500 text-sm">Profession</p> -->
+          <div class="bg-white rounded-lg shadow-lg overflow-hidden card">
+            <img
+              src="Assets/madhusudhan.jpeg"
+              alt="Club learning facilitator"
+              class="w-full h-full object-cover"
+            />
           </div>
-        </div>
-        <div class="bg-white rounded-lg shadow-lg overflow-hidden card">
-          <img
-            src="https://images.unsplash.com/photo-1543205089-425bfeaf4d43?q=80&w=1933&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt="Person 3"
-            class="w-full h-56 object-cover"
-          />
-          <div class="p-4">
-            <h4 class="text-xl font-semibold text-gray-800 mb-2">Pranay</h4>
-            <p class="text-gray-700 text-sm mb-2">President</p>
-            <!-- <p class="text-gray-500 text-sm">Profession</p> -->
+          <div class="bg-white rounded-lg shadow-lg overflow-hidden card">
+            <img
+              src="Assets/Kailash.jpeg"
+              alt="Seargent at arms"
+              class="w-full h-full object-cover"
+            />
           </div>
-        </div>
-        <div class="bg-white rounded-lg shadow-lg overflow-hidden card">
-          <img
-            src="https://images.unsplash.com/photo-1543205089-425bfeaf4d43?q=80&w=1933&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt="Person 3"
-            class="w-full h-56 object-cover"
-          />
-          <div class="p-4">
-            <h4 class="text-xl font-semibold text-gray-800 mb-2">Pranay</h4>
-            <p class="text-gray-700 text-sm mb-2">President</p>
-            <!-- <p class="text-gray-500 text-sm">Profession</p> -->
+          <div class="bg-white rounded-lg shadow-lg overflow-hidden card">
+            <img
+              src="Assets/Anil.jpeg"
+              alt="Dr international"
+              class="w-full h-full object-cover"
+            />
           </div>
-        </div>
-        <div class="bg-white rounded-lg shadow-lg overflow-hidden card">
-          <img
-            src="https://images.unsplash.com/photo-1543205089-425bfeaf4d43?q=80&w=1933&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt="Person 3"
-            class="w-full h-56 object-cover"
-          />
-          <div class="p-4">
-            <h4 class="text-xl font-semibold text-gray-800 mb-2">Pranay</h4>
-            <p class="text-gray-700 text-sm mb-2">President</p>
-            <!-- <p class="text-gray-500 text-sm">Profession</p> -->
+          <div class="bg-white rounded-lg shadow-lg overflow-hidden card">
+            <img
+              src="Assets/sruthi.jpeg"
+              alt="Dr.service"
+              class="w-full h-full object-cover"
+            />
           </div>
-        </div>
-        <div class="bg-white rounded-lg shadow-lg overflow-hidden card">
-          <img
-            src="https://images.unsplash.com/photo-1543205089-425bfeaf4d43?q=80&w=1933&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt="Person 3"
-            class="w-full h-56 object-cover"
-          />
-          <div class="p-4">
-            <h4 class="text-xl font-semibold text-gray-800 mb-2">Pranay</h4>
-            <p class="text-gray-700 text-sm mb-2">President</p>
-            <!-- <p class="text-gray-500 text-sm">Profession</p> -->
+          <div class="bg-white rounded-lg shadow-lg overflow-hidden card">
+            <img
+              src="Assets/Jaswee.jpeg"
+              alt="Public Image"
+              class="w-full h-full object-cover"
+            />
           </div>
-        </div>
-        <div class="bg-white rounded-lg shadow-lg overflow-hidden card">
-          <img
-            src="https://images.unsplash.com/photo-1543205089-425bfeaf4d43?q=80&w=1933&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt="Person 3"
-            class="w-full h-56 object-cover"
-          />
-          <div class="p-4">
-            <h4 class="text-xl font-semibold text-gray-800 mb-2">Pranay</h4>
-            <p class="text-gray-700 text-sm mb-2">President</p>
-            <!-- <p class="text-gray-500 text-sm">Profession</p> -->
+          <div class="bg-white rounded-lg shadow-lg overflow-hidden card">
+            <img
+              src="Assets/Raviteja.jpeg"
+              alt="professional services"
+              class="w-full h-full object-cover"
+            />
           </div>
-        </div>
-        <div class="bg-white rounded-lg shadow-lg overflow-hidden card">
-          <img
-            src="https://images.unsplash.com/photo-1543205089-425bfeaf4d43?q=80&w=1933&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt="Person 3"
-            class="w-full h-56 object-cover"
-          />
-          <div class="p-4">
-            <h4 class="text-xl font-semibold text-gray-800 mb-2">Pranay</h4>
-            <p class="text-gray-700 text-sm mb-2">President</p>
-            <!-- <p class="text-gray-500 text-sm">Profession</p> -->
+          <div class="bg-white rounded-lg shadow-lg overflow-hidden card">
+            <img
+              src="Assets/Stella.jpeg"
+              alt="RYLC"
+              class="w-full h-full object-cover"
+            />
           </div>
-        </div>
-        <div class="bg-white rounded-lg shadow-lg overflow-hidden card">
-          <img
-            src="https://images.unsplash.com/photo-1543205089-425bfeaf4d43?q=80&w=1933&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt="Person 3"
-            class="w-full h-56 object-cover"
-          />
-          <div class="p-4">
-            <h4 class="text-xl font-semibold text-gray-800 mb-2">Pranay</h4>
-            <p class="text-gray-700 text-sm mb-2">President</p>
-            <!-- <p class="text-gray-500 text-sm">Profession</p> -->
+          <div class="bg-white rounded-lg shadow-lg overflow-hidden card">
+            <img
+              src="Assets/Teja.jpeg"
+              alt="finance"
+              class="w-full h-full object-cover"
+            />
           </div>
-        </div>
-        <div class="bg-white rounded-lg shadow-lg overflow-hidden card">
-          <img
-            src="https://images.unsplash.com/photo-1543205089-425bfeaf4d43?q=80&w=1933&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt="Person 3"
-            class="w-full h-56 object-cover"
-          />
-          <div class="p-4">
-            <h4 class="text-xl font-semibold text-gray-800 mb-2">Pranay</h4>
-            <p class="text-gray-700 text-sm mb-2">President</p>
-            <!-- <p class="text-gray-500 text-sm">Profession</p> -->
+          <div class="bg-white rounded-lg shadow-lg overflow-hidden card">
+            <img
+              src="Assets/Mani.jpeg"
+              alt="membership"
+              class="w-full h-full object-cover"
+            />
           </div>
-        </div>
-        <div class="bg-white rounded-lg shadow-lg overflow-hidden card">
-          <img
-            src="https://images.unsplash.com/photo-1543205089-425bfeaf4d43?q=80&w=1933&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt="Person 3"
-            class="w-full h-56 object-cover"
-          />
-          <div class="p-4">
-            <h4 class="text-xl font-semibold text-gray-800 mb-2">Pranay</h4>
-            <p class="text-gray-700 text-sm mb-2">President</p>
-            <!-- <p class="text-gray-500 text-sm">Profession</p> -->
+          <div class="bg-white rounded-lg shadow-lg overflow-hidden card">
+            <img
+              src="Assets/Pranav.jpeg"
+              alt="Rotary foundation"
+              class="w-full h-full object-cover"
+            />
           </div>
-        </div>
+
       </div>
     </div>
     <footer class="bg-gray-900 text-white py-8">
@@ -384,6 +294,23 @@
         </div>
       </div>
     </footer>
+    <script>
+      window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        document.getElementById("progress").style.display = "flex";
+    } else {
+        document.getElementById("progress").style.display = "none";
+    }
+}
+
+document.getElementById("progress").onclick = function() {
+    document.body.scrollTop = 0;
+    document.documentElement.scrollTop = 0;
+}
+
+    </script>
     <script src="script.js"></script>
   </body>
 </html>
