--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           >Home</a
         >
         <a
-          href="rotractors.html"
+          href="#our-team"
           class="text-white text-xl py-4 hover:text-gray-300"
           >Our Rotractors</a
         >
